examples/errors/runtime_error_division_by_zero.lox
// This file demonstrates runtime error reporting
// Division by zero error

var x = 10
var y = "hello" + x
var z = 5 / 0
print z
